compilers/ID/cool/regression/BASE_cgtest/old_cool/begin1.cl.stderr
"./BASE_cgtest/begin1.cl", line 4: parse error at or near END
Compilation halted due to lex and parse errors
