compilers/ID/cool/regression/BASE_cgtest/old_cool/begin1.cl
class Main is
  main() : Object is
	begin
	end
  end;
end ;

